# Discovery-kerchunk-timeseries

./: README.md  pyproj.toml  pyproject.toml
.github/workflows/: pytest-workflow.yml  ruff-lint-workflow.yml
src/: __init__.py  kerchunk_netcdf4.py  requirements.txt
tests/: test_kerchunk_netcdf4.py
