[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.1"
name = "asf_kerchunk_timeseries"
authors = [
    {name = "Alaska Satellite Facility Discovery Team", email = "uaf-asf-discovery@alaska.edu"},
]
description = """This package is a wrapper around [Kerchunk](https://github.com/fsspec/kerchunk) for generating
zarr stores for individual netcdf4/hdf5 files as well as consolidating spatially aligned zarr stores
into a single temporal zarr store, indexed by the source_file_name."""


readme = "README.MD"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiobotocore",
    "zarr~=2.18",
    "kerchunk~=0.2.6",
    "s3fs",
    "ujson~=5.10",
    "h5py~=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
]

[tool.setuptools]
package-dir = {"asf_kerchunk_timeseries" = "src/"}
